--- a/jonmircha/src/App.css
+++ b/jonmircha/src/App.css
@@ -5,42 +5,6 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
 .container {
   border: red 4px solid;
   padding: 2rem;
@@ -50,7 +14,7 @@ button {
   display: inline-block;
 
   padding: 2rem;
-  border: 2px white solid;
+  border: none;
   color: white;
   background-color: rgb(62, 174, 174);
   border-radius: 15%;
@@ -60,4 +24,8 @@ button {
 .p-1{
   border: solid red 1px;
   white-space: "pre-warp";
+}
+
+.menu{
+  display: none;
 }
